--- a/hola.html
+++ b/hola.html
@@ -6,6 +6,7 @@
 
   <p>Este es el cuerpo de mi primera página HTML</p>
   <p>Este segundo párrafo también forma parte del cuerpo</p>
+  <h1>Hola mundo</h1>
 
 </body>
 </html>
